--- a/GB_process.ipynb
+++ b/GB_process.ipynb
@@ -5,9 +5,9 @@
    "id": "78c4c6c2",
    "metadata": {},
    "source": [
-    "Using WALLET, MINER and RISCV Dataset\n",
+    "Gradient Boost Classification Using Ghost, WALLET, MINER and RISCV Dataset\n",
     "\n",
-    "Accuracy: 91%"
+    "Accuracy: 99%"
    ]
   },
   {
